--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,10 +11,11 @@
       <div class="wrapper">
         {{ content }}
 
+        <br/>
+
         {% if site.comments %}
-          <div id="disqus_thread"></div>
+          <!-- <div id="disqus_thread"></div>
           <script>
-          var disqus_developer = 1;
           /**
           *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
           *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
@@ -31,7 +32,9 @@
           </script>
           <noscript>Please enable JavaScript to view the
             <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
-          </noscript>
+          </noscript> -->
+
+          {% include disqus.html %}
         {% endif %}
       </div>
     </main>
